# uci-test-suite

./: .gitignore  README.md  pyproject.toml
uci_test_suite/: __main__.py
